# 2610DjangoViteStarter

./: pyproject.toml
_server/core/: models.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py
client/: package-lock.json  package.json
client/src/: App.jsx
