[tool.poetry]
name = "photoapp"
version = "0.1.0"
description = ""
authors = ["Joseph Ditton <jditton.atomic@gmail.com>", "Sam Elliss <donttalktome>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
django = "^5.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
